fixed image size issue on mobile

--- a/src/style/sections/_movie-reviews.scss
+++ b/src/style/sections/_movie-reviews.scss
@@ -93,8 +93,7 @@
 		display: grid;
 		gap: 1rem;
 		grid-template-rows: 2.5rem 1fr;
-		grid-template-columns: 1fr 1fr;
-		text-align: left;
+		grid-template-columns: repeat(2, minmax(15rem, 1fr));
 
 		@include respond(1300) {
 			margin-right: 10rem;
@@ -114,6 +113,7 @@
 			font-size: $default-font-size;
 			font-weight: 700;
 			grid-column: 1 / 3;
+			grid-row: 1 / 2;
 
 			@include respond(1500) {
 				font-size: $md-font-size;
@@ -121,12 +121,10 @@
 		}
 	}
 
-	.item-0 {
-		grid-column: 1 / 2;
-	}
-	.item-1 {
-		grid-column: 2 / 3;
-	}
+	// .item-0 {
+	// 	grid-column: 1 / 3;
+	// 	grid-row: 2 / 3;
+	// }
 
 	&__similar-movie {
 		cursor: pointer;
@@ -151,7 +149,6 @@
 
 			@include respond(400) {
 				width: 100%;
-				height: auto;
 			}
 		}
 
